--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -12420,6 +12420,25 @@ body.sidebar-collapse:not(.sidebar-mini-md):not(.sidebar-mini) .main-header::bef
   transition: none !important;
 }
 
+.varient_image_btn {
+  display: none;
+}
+
+.table.table-condensed td,
+.table.table-condensed-inner td {
+  padding: 0;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.table.table-condensed-inner {
+  margin: 0;
+}
+
+.table.table-condensed-inner label {
+  margin: 0;
+}
+
 .main-header {
   border-bottom: 1px solid #dee2e6;
   z-index: 1034;
