--- a/resources/sass/dashboard/_layout.scss
+++ b/resources/sass/dashboard/_layout.scss
@@ -617,6 +617,10 @@ body:not(.sidebar-mini-md) {
 .table{
   &.table-condensed,
   &.table-condensed-inner{
+    thead th{
+      vertical-align: middle;
+      text-align: center;
+    }
     td{
       padding: 0;
       vertical-align: middle;
