--- a/resources/sass/dashboard/Admin.scss
+++ b/resources/sass/dashboard/Admin.scss
@@ -10,6 +10,8 @@
 @import 'bootstrap-variables';
 @import '~bootstrap/scss/bootstrap';
 
+@import '~toastr/toastr';
+
 // Variables and Mixins
 // ---------------------------------------------------
 @import 'variables';
