--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -2387,6 +2387,13 @@ section {
   i.delete {
     cursor: pointer;
   }
+  a.delete{
+    padding: 2px 6px;
+    transition: 0.5s;
+    &:hover{
+      background: #ff0000b8;    
+    }
+  }
 
   .title {
     margin-left: 20px;
