--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -1815,7 +1815,7 @@ footer.main-footer {
   .CTAs {
     margin-top: 30px;
 
-    a {
+    a{
       margin-bottom: 10px;
     }
   }
@@ -2485,7 +2485,7 @@ ul.order-menu {
 .CTAs {
   margin-top: 40px;
 
-  a {
+  a, button {
     margin-bottom: 10px;
   }
 }
